Added theme switching

--- a/carnival/Base.lproj/Main.storyboard
+++ b/carnival/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="carnival" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Carnival_Clip" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -29,6 +29,9 @@
                             <constraint firstItem="j7L-JP-8t0" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="uSx-Ii-aJb"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="image" destination="j7L-JP-8t0" id="c2t-n5-uMD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
